Remove assert failing on missing files

BUG:469269
BUG:469923
FIX-IN:FIXED-IN:1.10.5